# mx-strategy-contribution-token-sc

./: Cargo.toml  README.md  sc-config.toml
meta/: Cargo.toml
meta/src/: main.rs
src/: errors.rs  lib.rs  strategy_contribution_token_proxy.rs
tests/: participate_tests.rs  register_app_tests.rs  register_tests.rs  setup.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
