[package]
name = "strategy-contribution-token-meta"
version = "0.1.0"
edition = "2018"
publish = false
authors = ["Micha Vie <micha@peerme.io>", "PeerMe <hello@peerme.io>"]

[dev-dependencies]

[dependencies.strategy-contribution-token]
path = ".."

[dependencies.multiversx-sc-meta]
version = "0.50.3"
